Change key and secret name for last.fm in env file

--- a/spotvars.env.example
+++ b/spotvars.env.example
@@ -2,5 +2,5 @@ SPOTIPY_CLIENT_ID='YOUR SPOTIFY CLIENT ID'
 SPOTIPY_CLIENT_SECRET='YOUR SPOTIFY CLIENT SECRET'
 SPOTIPY_REDIRECT_URI='https://example.com'
 
-API_KEY='YOUR LAST.FM API KEY'
-API_SECRET='YOUR LAST.FM API SECRET'
+LASTFM_KEY='YOUR LAST.FM API KEY'
+LASTFM_SECRET='YOUR LAST.FM API SECRET'
