--- a/spotvars.env.example
+++ b/spotvars.env.example
@@ -4,3 +4,5 @@ SPOTIPY_REDIRECT_URI='https://example.com'
 
 LASTFM_KEY='YOUR LAST.FM API KEY'
 LASTFM_SECRET='YOUR LAST.FM API SECRET'
+
+GENIUS_API_TOKEN='YOUR GENIUS API TOKEN'
